...
        Column(modifier = Modifier.padding(top = 128.dp)) {
            TextField(
                value = cardNumber,
                onValueChange = onCardNumberChanged,
                placeholder = { Text(text = "Card Number") })
            Button(onClick = onNext, modifier = Modifier.align(Alignment.CenterHorizontally)) {
                Text(text = "Next")
            }
        }
    }
}

@Preview(showSystemUi = true)
...
